# ursa-dsp

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
auto_test_run/: Project_Poseidon:_Mapping_the_Mid-Atlantic_Ridge_dsp.html  Project_Poseidon:_Mapping_the_Mid-Atlantic_Ridge_dsp_log.json
example_dsps/: Merolla_Lab_Data_Security_Plan.docx  NIH_dbGap_UCR_Data_Security_Plan.docx  Syvertsen_Data_Security_Plan.docx  UCR Data Security Plan - Sovero Dept of Education.docx  UCR_Data_Security_Plan_Template.docx  UCR_HPCC_Data_Security_Plan.docx
functional_test_v0.3.2/: Sanitization_Test_dsp.html  Sanitization_Test_dsp_log.json
legacy/: dsp_generator_final.py  gdoc_dsp_generator.py
schema_test_v0.3.4/: CRISPR_Gene_Editing_Research_dsp.html  CRISPR_Gene_Editing_Research_dsp_log.json
src/ursa_dsp/: cli.py  config.py
src/ursa_dsp/core/: generator.py  processor.py  rag.py  schema.py
src/ursa_dsp/output/: renderer.py
src/ursa_dsp/utils/: io.py
templates/: base.html  dsp_template_structure.json  report.html
test_run_v0.3.0/: Urban_Change_Detection_Phase_2_dsp.html  Urban_Change_Detection_Phase_2_dsp_log.json
tests/: conftest.py  test_core.py
